Fixed icon run-off on smaller mobile devices
This focuses on both checkers and admin's, with checkers being the primary target.

- Slightly narrowed the book-chapter chooser. I'm aware there's an existing refactor to this, so hopefully it will make this less necessary
- Moved chapter audio next to the book-chapter chooser. This makes a little more sense for checkers, since the chapter audio is near the chapter selection
- Removed circle outline from chapter audio icon
- Moved Add Question button to question nav panel. This is still a logical place for it to live, and it fixes a run-off issue for admin's

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking.component.scss
@@ -217,8 +217,28 @@ header {
     background-color: lighten(vars.$sf_grey, 70%);
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-between;
     padding: 9px;
+
+    .question-nav-left {
+      display: flex;
+      align-items: center;
+      column-gap: 4px;
+    }
+
+    .add-question-button.mat-mdc-icon-button {
+      display: none;
+    }
+
+    @include media-breakpoint('<=', sm) {
+      .add-question-button.mat-mdc-button {
+        display: none;
+      }
+
+      .add-question-button.mat-mdc-icon-button {
+        display: block;
+      }
+    }
 
     .question-nav-wrapper {
       display: flex;
@@ -247,7 +267,6 @@ header {
     @include media-breakpoint('<=', sm, $questionsPanelBreakpoint) {
       // Widen once the questions panel is hidden
       margin-inline-start: -20px;
-      justify-content: space-between;
     }
 
     .next-question {
